# MiGL

./: ACKNOWLEDGMENT.md  Cargo.toml  Readme.md
examples/: axes.rs  capture_and_highlight.rs  cube.rs  dynamic_blob.rs  jug.rs  planetarium.rs  spaceship.rs  turntable.rs
resources/: stars.json
resources/model/: sphere.blend  starship.blend
resources/model/jug/: jug.blend
resources/shaders/axes/: frag.glsl  vert.glsl
resources/shaders/blur/: frag.glsl  vert.glsl
resources/shaders/cube/: frag.glsl  vert.glsl
resources/shaders/diffuse/: frag.glsl  vert.glsl
resources/shaders/jug/: frag.glsl
resources/shaders/rays/: frag.glsl  geom.glsl  vert.glsl
resources/shaders/stars/: frag.glsl  vert.glsl
resources/shaders/textured_diffuse/: frag.glsl  vert.glsl
src/: attributes.rs  buffer.rs  error.rs  frame.rs  lib.rs  log.rs  math3d.rs  program.rs  shader.rs  texture.rs  uniform.rs  utils.rs
src/utils/: axes.rs  camera.rs  load.rs
