[package]
name = "MiGL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sdl2 = ["dep:sdl2"]

[lib]
name = "migl"
path = "src/lib.rs"
test = true
crate-type = ["lib"]

[dependencies]
gl                  = "0.14.0"
bytemuck            = "1.8.0"
image               = "0.24.1"
sdl2 = {version = ">=0.10.0", optional = true}

