[package]
name = "MiGL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sdl2  = ["dep:sdl2"]
utils = []

[lib]
name = "migl"
path = "src/lib.rs"
test = true
crate-type = ["lib"]

[dependencies]
gl                  = "0.14.0"
bytemuck            = "1.8.0"
image               = "0.24.1"
sdl2 = {version = ">=0.10.0", optional = true}


[dev-dependencies]
serde =  { version = "*", features = ["derive"] }
serde_json = "1.0.85"
rand = "*"

[[example]]
name = "spaceship"
path = "examples/spaceship.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "axes"
path = "examples/axes.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "planetarium"
path = "examples/planetarium.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "jug"
path = "examples/jug.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "turntable"
path = "examples/turntable.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "capture"
path = "examples/capture_and_blur.rs"
required-features = ["sdl2", "utils"]

[[example]]
name = "dynamic_blob"
path = "examples/dynamic_blob.rs"
required-features = ["sdl2", "utils"]